[gd_scene load_steps=6 format=3 uid="uid://dkeldoc3xltse"]

[ext_resource type="Script" path="res://scripts/effects/EventSpawnPortal.gd" id="1_portal"]
[ext_resource type="Texture2D" path="res://assets/sprites/effects/art-purple-spiral-purple-background.png" id="2_spiral"]
[ext_resource type="Shader" path="res://shaders/portal_circle_mask.gdshader" id="3_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_circle"]
shader = ExtResource("3_shader")

[sub_resource type="Gradient" id="Gradient_vortex"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.5, 0.2, 0.8, 1, 0.8, 0.3, 0.5, 1, 1, 0.5, 0.2, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vortex"]
gradient = SubResource("Gradient_vortex")

[node name="EventSpawnPortal" type="Node2D"]
script = ExtResource("1_portal")

[node name="SpiralSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
material = SubResource("ShaderMaterial_circle")
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_spiral")

[node name="VortexParticles" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
emitting = true
amount = 50
lifetime = 2.0
preprocess = 1.0
emission_shape = 1
emission_sphere_radius = 50.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
tangential_accel_min = 80.0
tangential_accel_max = 120.0
scale_amount_min = 3.0
scale_amount_max = 5.0
color_ramp = SubResource("GradientTexture1D_vortex")

[node name="RingParticles" type="CPUParticles2D" parent="."]
emitting = true
modulate = Color(0.5, 1, 1, 0.4)
amount = 30
lifetime = 1.5
preprocess = 0.5
emission_shape = 2
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 80.0
emission_ring_inner_radius = 75.0
particle_flag_align_y = true
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 0.0
initial_velocity_max = 0.0
scale_amount_min = 1.0
scale_amount_max = 8.0
color = Color(0.8, 1, 1, 1)

[node name="SparkParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.9
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 1, 0.5, 1)

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 2000.0
attenuation = 2.0

